Added new files

--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
 <body>
    <div class="page">
        <div class="navbar">
-           <img src="img/shlogo.jpg" class="logo">
+           <img src="Images/shlogo.jpg" class="logo">
            <h1>Society<span style="font-family: 'Merienda', cursive;
             color:rgb(20, 76, 80);">HUB</span></h1>
            <nav>
@@ -25,7 +25,7 @@
        </div>
        <div class="row">
         <div class="col-1">
-             <img src="img/building1.jpg" >
+             <img src="Images/building1.jpg" >
         </div>
         <div class="col-2">
            <div class="form-container">
@@ -116,7 +116,7 @@
             </div>
         </div>
         <div class="copyright">
-            <h3>Copyright @2021|Designed with HTML,CSS,PHP.</h3>
+            <h3>Copyright @2023|Designed with HTML,CSS,PHP.</h3>
         </div>
     </footer>
    <script>
