Added Validation for admin's approval for user.

--- a/login.html
+++ b/login.html
@@ -102,7 +102,7 @@
                 <div class="content">
                     <div class="place">
                         <span class="fas fa-map-marker-alt"></span>
-                        <span class="text">Thanekar Parkland,Badlapur(E)</span>
+                        <span class="text">Thane - 400604</span>
                     </div>
                     <div class="phone">
                         <span class="fas fa-phone-alt"></span>
@@ -116,7 +116,7 @@
             </div>
         </div>
         <div class="copyright">
-            <h3>Copyright @2023|Designed with HTML,CSS,PHP.</h3>
+            <h3>Copyright @2025|Designed with HTML,CSS,PHP.</h3>
         </div>
     </footer>
    <script>
